--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "boardgame.io": "^0.50.2",
     "cassandra-driver": "^4.7.2",
     "cors": "^2.8.5",
