--- a/package.json
+++ b/package.json
@@ -5,15 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "app": "npm-run-all --parallel dev server",
     "server": "node server/server.mjs",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "docker:app": "npm i  && npm run dev",
-    "docker:server": "npm i && npm run server"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "boardgame.io": "^0.50.2",
+    "cassandra-driver": "^4.7.2",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
