--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "boardgame.io": "^0.50.2",
     "cassandra-driver": "^4.7.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
