migrate user table to postgres

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,15 @@ services:
     image: cassandra:latest
     ports: 
       - 9042:9042
-    restart: always
+
+  postgres:
+    image: postgres:latest
+    volumes:
+      - ./data:/var/lib/postgresql/data
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: helloworld
   
   # server:
   #   depends_on:
