--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_SERVER="http://localhost:3000"
 VITE_ORIGIN="http://localhost:5173"
-JWT_SECRET="temporarytest"; // public dev placeholder
+JWT_SECRET="temporarytest" # public dev placeholder
