--- a/package.json
+++ b/package.json
@@ -19,15 +19,19 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^3.0.3",
+    "@types/socket.io-client": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "boardgame.io": "^0.50.2",
     "cassandra-driver": "^4.7.2",
+    "chess.js": "^1.0.0-beta.8",
+    "chessboardjsx": "^2.4.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-handlebars": "^7.0.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "npm-run-all": "^4.1.5",
@@ -35,10 +39,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
+    "socket.io": "^4.7.0",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/chess.js": "^0.13.7",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
@@ -48,6 +55,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
