--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^3.0.3",
     "bcryptjs": "^2.4.3",
@@ -34,6 +36,7 @@
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
