--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
+    "nanoid": "^5.0.7",
     "npm-run-all": "^4.1.5",
     "pg": "^8.11.5",
     "react": "^18.2.0",
@@ -40,8 +41,7 @@
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^9.0.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
