replace in memory game map with redis

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,12 @@ services:
       - 5432:5432
     environment:
       POSTGRES_PASSWORD: helloworld
+
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
+
   
   # server:
   #   depends_on:
