show user data/statistics

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.0.4",
     "esm": "^3.2.25",
     "express": "^4.19.2",
     "ioredis": "^5.4.1",
