begin basic chat

--- a/package.json
+++ b/package.json
@@ -53,12 +53,14 @@
     "react-router-dom": "^6.22.3",
     "stockfish": "^16.0.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
+    "@types/websocket": "^1.0.10",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
