--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@radix-ui/themes": "^3.0.3",
     "@tanstack/react-table": "^8.16.0",
     "bcryptjs": "^2.4.3",
@@ -47,12 +50,14 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.378.0",
     "nanoid": "^5.0.7",
+    "next-themes": "^0.3.0",
     "npm-run-all": "^4.1.5",
     "pg": "^8.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.0",
     "react-router-dom": "^6.22.3",
+    "sonner": "^1.4.41",
     "stockfish": "^16.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
